[gd_scene load_steps=5 format=2]

[ext_resource path="res://demo/client_ui.gd" type="Script" id=1]
[ext_resource path="res://client/multiplayer_client.gd" type="Script" id=2]
[ext_resource path="res://Arena.tscn" type="PackedScene" id=3]
[ext_resource path="res://character/character.tscn" type="PackedScene" id=4]

[node name="root" type="Node2D"]

[node name="ClientUI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Client" type="Node" parent="ClientUI"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="ClientUI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="HBoxContainer" parent="ClientUI/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ClientUI/VBoxContainer/Connect"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Connect to:"

[node name="Host" type="LineEdit" parent="ClientUI/VBoxContainer/Connect"]
margin_left = 77.0
margin_right = 921.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "ws://localhost:9080"

[node name="Room" type="Label" parent="ClientUI/VBoxContainer/Connect"]
margin_left = 925.0
margin_right = 962.0
margin_bottom = 24.0
size_flags_vertical = 5
text = "Room"
valign = 1

[node name="RoomSecret" type="LineEdit" parent="ClientUI/VBoxContainer/Connect"]
margin_left = 966.0
margin_right = 1024.0
margin_bottom = 24.0
placeholder_text = "secret"

[node name="HBoxContainer" type="HBoxContainer" parent="ClientUI/VBoxContainer"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 52.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="ClientUI/VBoxContainer/HBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "Start"

[node name="Stop" type="Button" parent="ClientUI/VBoxContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 91.0
margin_bottom = 20.0
text = "Stop"

[node name="Seal" type="Button" parent="ClientUI/VBoxContainer/HBoxContainer"]
margin_left = 101.0
margin_right = 139.0
margin_bottom = 20.0
text = "Seal"

[node name="Ping" type="Button" parent="ClientUI/VBoxContainer/HBoxContainer"]
margin_left = 149.0
margin_right = 188.0
margin_bottom = 20.0
text = "Ping"

[node name="Peers" type="Button" parent="ClientUI/VBoxContainer/HBoxContainer"]
margin_left = 198.0
margin_right = 280.0
margin_bottom = 20.0
text = "Print peers"

[node name="TextEdit" type="TextEdit" parent="ClientUI/VBoxContainer"]
margin_top = 60.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
readonly = true

[node name="Label" type="Label" parent="ClientUI"]
margin_left = 456.835
margin_top = 173.673
margin_right = 496.835
margin_bottom = 187.673
rect_scale = Vector2( 4.2, 4.44 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="ClientUI"]
margin_left = 1332.29
margin_top = 94.9831
margin_right = 1640.29
margin_bottom = 556.983
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="ClientUI"]
margin_left = 1259.93
margin_top = 493.339
margin_right = 1459.93
margin_bottom = 533.339
text = "insert name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arena" parent="." instance=ExtResource( 3 )]

[node name="baj" parent="." groups=[
"owned",
] instance=ExtResource( 4 )]
position = Vector2( 429.142, 487.604 )
base_name = "poggers"

[connection signal="pressed" from="ClientUI/VBoxContainer/HBoxContainer/Start" to="ClientUI" method="start"]
[connection signal="pressed" from="ClientUI/VBoxContainer/HBoxContainer/Stop" to="ClientUI" method="stop"]
[connection signal="pressed" from="ClientUI/VBoxContainer/HBoxContainer/Seal" to="ClientUI" method="_on_Seal_pressed"]
[connection signal="pressed" from="ClientUI/VBoxContainer/HBoxContainer/Ping" to="ClientUI" method="ping"]
[connection signal="pressed" from="ClientUI/VBoxContainer/HBoxContainer/Peers" to="ClientUI" method="_on_Peers_pressed"]
[connection signal="color_changed" from="ClientUI/ColorPicker" to="ClientUI" method="_on_ColorPicker_color_changed"]
[connection signal="text_changed" from="ClientUI/TextEdit" to="ClientUI" method="_on_TextEdit_text_changed"]
